Adding new tests for increasing test coverage.